--- a/AzPC.Blazor/AzPC.Blazor/appsettings.json
+++ b/AzPC.Blazor/AzPC.Blazor/appsettings.json
@@ -55,24 +55,12 @@
     // - ExpirationAfterAccess: cache entries expire after specified period of no access, in seconds. Set to 0 (default) to disable expiration.
     // - CompressionLevel: control whether cache entries should be compressed or not, possible values: "NoCompression" (default), "Optimal", "Fastest" and "SmallestSize"
     // - ConnectionString: points to the connection string in ConnectionStrings section, for Redis only
-
-    "Application": {
-      "Type": "Memory",
-      "KeyPrefix": "App-", // cache key prefix, for Redis only
-      "SizeLimit": 100000000, // in bytes, ~100mb, for in-memory cache only
-      //"ExpirationAfterWrite": 3600, // cache entries expire after specified period, in seconds. Set to 0 to disable expiration.
-      "ExpirationAfterAccess": 3600, // cache entries expire after specified period of no access, in seconds. Set to 0 to disable expiration.
-      "CompressionLevel": "NoCompression", // possible values: "NoCompression", "Optimal", "Fastest" and "SmallestSize"
-      "ConnectionString": "ApplicationRedis" // points to the connection string in ConnectionStrings section, for Redis only
-    },
-
     "Identity": {
       "Type": "Memory",
       "KeyPrefix": "Id-",
       "SizeLimit": 100000000,
       "ExpirationAfterWrite": 3600,
-      "CompressionLevel": "NoCompression",
-      "ConnectionString": "IdentityRedis"
+      "CompressionLevel": "NoCompression"
     }
   },
 
@@ -86,28 +74,12 @@
     // - ConnectionString: points to the connection string in ConnectionStrings section
     // - UseDbContextPool: if true, use DbContext pooling
     // - PoolSize: maximum number of DbContext instances in the pool (if UseDbContextPool is true)
-
-    "Application": {
-      "Type": "SQLServer",
-      "ConnectionString": "ApplicationSQLServer", // points to the connection string in ConnectionStrings section
-      "UseDbContextPool": true, // use DbContext pooling"
-      "PoolSize": 128 // maximum number of DbContext instances in the pool
-    },
-
     "Identity": {
-      "Type": "SQLServer",
-      "ConnectionString": "IdentitySQLServer" // points to the connection string in ConnectionStrings section
+      "Type": "InMemory"
     }
   },
 
   "ConnectionStrings": {
-    "IdentitySQLite": "Data Source=./data/sqlite/identity.db",
-    "IdentitySQLServer": "Server=(localdb)\\mssqllocaldb;Database=AzPCIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityRedis": "localhost:6379,abortConnect=false",
-
-    "ApplicationSQLite": "Data Source=./data/sqlite/application.db",
-    "ApplicationSQLServer": "Server=(localdb)\\mssqllocaldb;Database=AzPCApplication;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationRedis": "localhost:6379,abortConnect=false"
   },
 
   // Authentication settings
@@ -121,15 +93,7 @@
       // (Optional, default value = false) work or school accounts only: Query parameters are allowed in redirect URIs for applications that only sign in users with work or school accounts.
       // (value = true): Query parameters are not allowed in redirect URIs for any app registration configured to sign in users with personal Microsoft accounts ==> query parameters are encoded in the "state" parameter.
       "WorkOrSchoolOnly": false
-    },
-    "Google": {
-      "ClientId": "your-client-id",
-      "ClientSecret": "your-client-secret"
     }
-    // "Facebook": {
-    //   "ClientId": "your-client-id",
-    //   "ClientSecret": "your-client-secret"
-    // }
   },
 
   // Seeding data
@@ -138,31 +102,8 @@
       // Note: each claim is in following format "<claim_type>:<claim_value>", e.g: "#role:global-admin"
       // Note: assigned roles are identified by their NAMEs, not IDs
       "Roles": [
-        {
-          "Name": "Global Admin",
-          "Description": "Global Administrator with full access to all features and settings.",
-          "Claims": [ "#role:global-admin" ]
-        },
-        {
-          "Name": "Account Admin",
-          "Description": "Account Administrator with permissions to manage users and roles.",
-          "Claims": [ "#role:user-manager", "#perm:create-user", "#perm:delete-user", "#perm:modify-user" ]
-        },
-        {
-          "Name": "Application Admin",
-          "Description": "Application Administrator with permissions to manage applications.",
-          "Claims": [ "#role:application-manager", "#perm:create-application", "#perm:delete-application", "#perm:modify-application" ]
-        }
       ],
       "Users": [
-        {
-          "UserName": "admin",
-          "Email": "admin@localhost",
-          "GivenName": "Administrator",
-          "FamilyName": "Local",
-          "Roles": [ "Global Admin" ],
-          "Claims": []
-        }
       ]
     }
   }
