--- a/AzPC.Blazor/AzPC.Blazor/appsettings.json
+++ b/AzPC.Blazor/AzPC.Blazor/appsettings.json
@@ -10,9 +10,9 @@
 
   // Application metadata
   "App": {
-    "Name": "BAT",
+    "Name": "AzPC",
     "Version": "0.0.0",
-    "Description": "Blazor Admin Template"
+    "Description": "Azure Pricing Explorer & Comparator"
   },
 
   "API": {
@@ -36,7 +36,7 @@
 
   // JWT settings
   "Jwt": {
-    "Issuer": "blazor-admin-template",
+    "Issuer": "AzPC",
     "Audience": "http://localhost:8080",
     "Expiration": 7200 // default expiration time in seconds
     //"Key": "S3cretK3yP@dd1ngzJh^H/9V+q),c'8I", // (min size = 32 bytes) if not empty the JWT will be signed with this key using HMACSHA256; otherwise, it will be signed with the RSA private key using RSASHA256
@@ -85,9 +85,9 @@
   // Authentication settings
   "Authentication": {
     "Microsoft": {
-      "TenantId": "your-tentant-id-or-common",
-      "ClientId": "your-client-id",
-      "ClientSecret": "your-client-secret",
+      // "TenantId": "your-tentant-id-or-common",
+      // "ClientId": "your-client-id",
+      // "ClientSecret": "your-client-secret",
 
       // https://learn.microsoft.com/en-us/entra/identity-platform/reply-url#query-parameter-support-in-redirect-uris
       // (Optional, default value = false) work or school accounts only: Query parameters are allowed in redirect URIs for applications that only sign in users with work or school accounts.
