Add login prompt to login page

--- a/AzPC.Blazor/AzPC.Blazor/appsettings.json
+++ b/AzPC.Blazor/AzPC.Blazor/appsettings.json
@@ -12,7 +12,8 @@
   "App": {
     "Name": "AzPC",
     "Version": "0.0.0",
-    "Description": "Azure Pricing Explorer & Comparator"
+    "Description": "Azure Pricing Explorer & Comparator",
+    "LoginPrompt": ""
   },
 
   "API": {
