Fix access denied to /nonexistent

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -41,9 +41,9 @@ ARG UID=10001
 RUN adduser \
     --disabled-password \
     --gecos "" \
-    --home "/nonexistent" \
+    # --home "/nonexistent" \
     --shell "/sbin/nologin" \
-    --no-create-home \
+    # --no-create-home \
     --uid "$UID" \
     appuser
 RUN chown -R appuser:appuser /app
