--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,7 +48,8 @@ jobs:
   Release:
     runs-on: ubuntu-latest
     if: |
-      github.event.pull_request.merged == true
+      github.event.pull_request.merged == true &&
+      needs.ReleaseDryRun.outputs.RESULT == 'SUCCESS'
     needs: [ ReleaseDryRun ]
     permissions:
       contents: write # to be able to publish a GitHub release
@@ -135,6 +136,8 @@ jobs:
           fi
 
   MergeToMain:
+    if: |
+      needs.Release.outputs.RESULT == 'SUCCESS'
     runs-on: ubuntu-latest
     needs: [ Release ]
     permissions:
@@ -160,3 +163,109 @@ jobs:
               maintainer_can_modify: true,
             });
             console.log('✅ Created PR: ', pr);
+
+  PublishDockerImagesLinuxBuild:
+    if: |
+      needs.Release.outputs.RESULT == 'SUCCESS'
+    needs: [Release]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platforms: [ 'linux/amd64', 'linux/arm64' ]
+    name: Build Docker image(s) - Linux - Dev Branch
+    env:
+      VERSION: ${{ needs.Release.outputs.VERSION }}
+    outputs:
+      VERSION: ${{ needs.Release.outputs.VERSION }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Update version metadata
+        run: |
+          DATE=`date +%Y%m%d%H%M%S`
+          sed -i -E "s/^(\s*\"Version\"\s*:\s*)\"[^\"]+\"/\1\"${{ env.VERSION }}-${DATE}\"/" AzPC.Api/appsettings.json
+          sed -i -E "s/^(\s*\"Version\"\s*:\s*)\"[^\"]+\"/\1\"${{ env.VERSION }}-${DATE}\"/" AzPC.Blazor/AzPC.Blazor/appsettings.json
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PAT }}
+      - name: Prepare
+        run: |
+          platform=${{ matrix.platforms }}
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.DOCKER_IMAGE }}
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          platforms: ${{ matrix.platforms }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.DOCKER_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          file: ./Dockerfile
+          context: ./
+      - name: Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  PublishDockerImagesLinuxMerge:
+    runs-on: ubuntu-latest
+    needs: PublishDockerImagesLinuxBuild
+    name: Merge & Publish Docker image(s) - Linux
+    env:
+      VERSION: ${{ needs.PublishDockerImagesLinuxBuild.outputs.VERSION }}
+    steps:
+      - name: Download digests
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.DOCKER_IMAGE }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PAT }}
+      - name: Create manifest list and push
+        working-directory: /tmp/digests
+        run: |
+          docker buildx imagetools create \
+            -t ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }} \
+            -t ${{ env.DOCKER_IMAGE }}:latest \
+            -t ${{ env.DOCKER_IMAGE }}:${{ github.sha }} \
+            $(printf '${{ env.DOCKER_IMAGE }}@sha256:%s ' *)
+      - name: Inspect image
+        run: |
+          docker buildx imagetools inspect ${{ env.DOCKER_IMAGE }}:${{ steps.meta.outputs.version }}
+      - name: Log in to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Deploy to demo environment
+        uses: azure/webapps-deploy@v2
+        with:
+          # note: Once login is done with azure/login action, the next set of Azure actions in the workflow can re-use the same session within the job.
+          app-name: 'azpc'
+          images: docker.io/${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
