--- a/.github/workflows/data-update.yaml
+++ b/.github/workflows/data-update.yaml
@@ -35,3 +35,7 @@ jobs:
           git add azure-locations.json azure-products.json touch.txt
           git commit -m "Update Azure locations and product categories"
           git push origin dev
+
+  CallCI:
+    needs: update-azure-data
+    uses: ./.github/workflows/ci.yaml
