--- a/.github/workflows/data-update.yaml
+++ b/.github/workflows/data-update.yaml
@@ -36,6 +36,50 @@ jobs:
           git commit -m "Update Azure locations and product categories"
           git push origin dev
 
-  CallCI:
+  BuildAndTest:
+    runs-on: ubuntu-latest
     needs: update-azure-data
-    uses: ./.github/workflows/ci.yaml
+    strategy:
+      matrix:
+        dotnet: [ '8.x', '9.x' ]
+    name: Build and test with dotnet ${{ matrix.dotnet }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: dev
+      - name: Setup dotnet ${{ matrix.dotnet }}
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: ${{ matrix.dotnet }}
+      - name: Display dotnet version
+        run: dotnet --version
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --no-restore
+      - name: Test
+        run: dotnet test --no-restore
+
+  TestDockerfileLinux:
+    needs: BuildAndTest
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platforms: [ 'linux/amd64', 'linux/arm64' ]
+    name: Test building Docker image(s) for Linux
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: dev
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build Docker image for ${{ matrix.platforms }}
+        uses: docker/build-push-action@v6
+        with:
+          platforms: ${{ matrix.platforms }}
+          push: false
+          tags: test
+          file: ./Dockerfile
+          context: ./
